--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://passingti.me"
 title = "passingti.me"
 author = "Sean Bocirnea"
+theme = "hugo-dead-simple"
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
@@ -20,19 +21,6 @@ sectionPagesMenu = "main"
     name = "home"
     url = "/"
     weight = 1
-
-[module]
-[[module.imports]]
-    path = 'github.com/barklan/hugo-dead-simple'
-[[module.imports]]
-    path = 'github.com/hugomods/icons/vendors/bootstrap'
-[[module.imports]]
-    path = 'github.com/hugomods/images'
-[[module.imports]]
-    path = 'github.com/hugomods/bootstrap'
-[[module.imports]]
-    path = 'github.com/hugomods/katex'
-
 
 [markup]
   [markup.goldmark]
